// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button render disabled 1`] = `
<DocumentFragment>
  <button
    class="sc-blHHSb sc-gtLWhw jjIrRF bCHNzq"
    disabled=""
    variant="secondary"
  >
    <span
      class="icon"
    />
  </button>
</DocumentFragment>
`;

exports[`Button render primary small 1`] = `
<DocumentFragment>
  <button
    class="sc-blHHSb sc-gtLWhw bXlivv eyOGpV"
    variant="primary"
  >
    <span
      class="icon"
    />
  </button>
</DocumentFragment>
`;

exports[`Button render tertiary large 1`] = `
<DocumentFragment>
  <button
    class="sc-blHHSb sc-gtLWhw hWgJtU heMgUV"
    variant="tertiary"
  >
    <span
      class="icon"
    />
  </button>
</DocumentFragment>
`;
